--- a/Frenetic/Frenetic.csproj
+++ b/Frenetic/Frenetic.csproj
@@ -100,17 +100,21 @@
     <Compile Include="ListQueue.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TagHandlers\Common\NumberTagBase.cs" />
     <Compile Include="TagHandlers\Common\TextColorTags.cs" />
     <Compile Include="TagHandlers\Common\CVarTags.cs" />
     <Compile Include="TagHandlers\Common\EscapeTags.cs" />
     <Compile Include="TagHandlers\Common\ListTags.cs" />
     <Compile Include="TagHandlers\Common\TernaryTags.cs" />
+    <Compile Include="TagHandlers\Common\BooleanTagBase.cs" />
     <Compile Include="TagHandlers\Common\TextTags.cs" />
     <Compile Include="TagHandlers\Common\UnescapeTags.cs" />
     <Compile Include="TagHandlers\Common\UtilTags.cs" />
     <Compile Include="TagHandlers\Common\VarTags.cs" />
+    <Compile Include="TagHandlers\Objects\NumberTag.cs" />
     <Compile Include="TagHandlers\Objects\ListTag.cs" />
     <Compile Include="TagHandlers\Objects\TextTag.cs" />
+    <Compile Include="TagHandlers\Objects\BooleanTag.cs" />
     <Compile Include="TagHandlers\Objects\TimeTag.cs" />
     <Compile Include="TagHandlers\TagBit.cs" />
     <Compile Include="TagHandlers\TagData.cs" />
