--- a/Frenetic/Frenetic.csproj
+++ b/Frenetic/Frenetic.csproj
@@ -102,15 +102,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TagHandlers\Common\NumberTagBase.cs" />
     <Compile Include="TagHandlers\Common\TextColorTags.cs" />
-    <Compile Include="TagHandlers\Common\CVarTags.cs" />
-    <Compile Include="TagHandlers\Common\EscapeTags.cs" />
-    <Compile Include="TagHandlers\Common\ListTags.cs" />
-    <Compile Include="TagHandlers\Common\TernaryTags.cs" />
+    <Compile Include="TagHandlers\Common\CVarTagBase.cs" />
+    <Compile Include="TagHandlers\Common\EscapeTagBase.cs" />
+    <Compile Include="TagHandlers\Common\ListTagBase.cs" />
+    <Compile Include="TagHandlers\Common\TernaryTagBase.cs" />
     <Compile Include="TagHandlers\Common\BooleanTagBase.cs" />
-    <Compile Include="TagHandlers\Common\TextTags.cs" />
-    <Compile Include="TagHandlers\Common\UnescapeTags.cs" />
-    <Compile Include="TagHandlers\Common\UtilTags.cs" />
-    <Compile Include="TagHandlers\Common\VarTags.cs" />
+    <Compile Include="TagHandlers\Common\TextTagBase.cs" />
+    <Compile Include="TagHandlers\Common\UnescapeTagBase.cs" />
+    <Compile Include="TagHandlers\Common\UtilTagBase.cs" />
+    <Compile Include="TagHandlers\Common\VarTagBase.cs" />
     <Compile Include="TagHandlers\Objects\NumberTag.cs" />
     <Compile Include="TagHandlers\Objects\ListTag.cs" />
     <Compile Include="TagHandlers\Objects\TextTag.cs" />
@@ -120,7 +120,7 @@
     <Compile Include="TagHandlers\TagData.cs" />
     <Compile Include="TagHandlers\TagParser.cs" />
     <Compile Include="TagHandlers\TemplateObject.cs" />
-    <Compile Include="TagHandlers\TemplateTags.cs" />
+    <Compile Include="TagHandlers\TemplateTagBase.cs" />
     <Compile Include="TagHandlers\Variable.cs" />
     <Compile Include="TextStyle.cs" />
   </ItemGroup>
