Powerful error handling engine, fixes #8

--- a/Frenetic/Frenetic.csproj
+++ b/Frenetic/Frenetic.csproj
@@ -65,9 +65,11 @@
     <Compile Include="CommandSystem\CommonCmds\NoopCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\SetCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\ToggleCommand.cs" />
+    <Compile Include="CommandSystem\ErrorInducedException.cs" />
     <Compile Include="CommandSystem\Outputter.cs" />
     <Compile Include="CommandSystem\QueueCmds\BreakCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\CallCommand.cs" />
+    <Compile Include="CommandSystem\QueueCmds\CatchCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\GotoCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\DebugCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\DefineCommand.cs" />
@@ -87,6 +89,7 @@
     <Compile Include="CommandSystem\QueueCmds\RunCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\ScriptCacheCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\StopCommand.cs" />
+    <Compile Include="CommandSystem\QueueCmds\TryCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\UndefineCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\VarCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\WaitCommand.cs" />
