--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -82,6 +82,7 @@
     <Compile Include="CommandSystem\QueueCmds\FunctionCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\IfCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\InsertCommand.cs" />
+    <Compile Include="CommandSystem\QueueCmds\ErrorCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\MarkCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\ParsingCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\RegistereventCommand.cs" />
