--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -105,6 +105,7 @@
     <Compile Include="ListQueue.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TagHandlers\Common\BinaryTagBase.cs" />
     <Compile Include="TagHandlers\Common\IntegerTagBase.cs" />
     <Compile Include="TagHandlers\Common\NumberTagBase.cs" />
     <Compile Include="TagHandlers\Common\TextColorTags.cs" />
@@ -117,6 +118,7 @@
     <Compile Include="TagHandlers\Common\UnescapeTagBase.cs" />
     <Compile Include="TagHandlers\Common\UtilTagBase.cs" />
     <Compile Include="TagHandlers\Common\VarTagBase.cs" />
+    <Compile Include="TagHandlers\Objects\BinaryTag.cs" />
     <Compile Include="TagHandlers\Objects\IntegerTag.cs" />
     <Compile Include="TagHandlers\Objects\NullTag.cs" />
     <Compile Include="TagHandlers\Objects\NumberTag.cs" />
