Add an assert command, some error improvements

--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -85,6 +85,7 @@
     <Compile Include="CommandSystem\QueueCmds\MarkCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\ParsingCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\RepeatCommand.cs" />
+    <Compile Include="CommandSystem\QueueCmds\AssertCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\RequireCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\RunCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\ScriptCacheCommand.cs" />
