Use stacks of command sets
At this point 'queue' is fairly inaccurate word choice >.>

--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CommandSystem\CommandQueueEventArgs.cs" />
     <Compile Include="CommandSystem\Commands.cs" />
     <Compile Include="CommandSystem\CommandScript.cs" />
+    <Compile Include="CommandSystem\CommandStackEntry.cs" />
     <Compile Include="CommandSystem\CommonCmds\CleanmemCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\CvarinfoCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\DebugOutputInvalidCommand.cs" />
