--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -63,6 +63,7 @@
     <Compile Include="CommandSystem\CommonCmds\CleanmemCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\CvarinfoCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\DebugOutputInvalidCommand.cs" />
+    <Compile Include="CommandSystem\QueueCmds\InjectCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\DebugVarSetCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\EchoCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\HelpCommand.cs" />
