--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TagHandlers\Common\BinaryTagBase.cs" />
     <Compile Include="TagHandlers\Common\SystemTagBase.cs" />
+    <Compile Include="TagHandlers\Common\TagTypeBase.cs" />
     <Compile Include="TagHandlers\Common\TimeTagBase.cs" />
     <Compile Include="TagHandlers\Common\IntegerTagBase.cs" />
     <Compile Include="TagHandlers\Common\MapTagBase.cs" />
@@ -130,12 +131,15 @@
     <Compile Include="TagHandlers\Objects\NullTag.cs" />
     <Compile Include="TagHandlers\Objects\NumberTag.cs" />
     <Compile Include="TagHandlers\Objects\ListTag.cs" />
+    <Compile Include="TagHandlers\Objects\TagTypeTag.cs" />
     <Compile Include="TagHandlers\Objects\TextTag.cs" />
     <Compile Include="TagHandlers\Objects\BooleanTag.cs" />
     <Compile Include="TagHandlers\Objects\TimeTag.cs" />
     <Compile Include="TagHandlers\TagBit.cs" />
     <Compile Include="TagHandlers\TagData.cs" />
     <Compile Include="TagHandlers\TagParser.cs" />
+    <Compile Include="TagHandlers\TagSubHandler.cs" />
+    <Compile Include="TagHandlers\TagType.cs" />
     <Compile Include="TagHandlers\TemplateObject.cs" />
     <Compile Include="TagHandlers\TemplateTagBase.cs" />
     <Compile Include="TagHandlers\Variable.cs" />
