--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -63,6 +63,7 @@
     <Compile Include="CommandSystem\Commands.cs" />
     <Compile Include="CommandSystem\CommandScript.cs" />
     <Compile Include="CommandSystem\CommandStackEntry.cs" />
+    <Compile Include="CommandSystem\CommonCmds\ReloadCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\YamlCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\CleanmemCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\CvarinfoCommand.cs" />
