--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -114,6 +114,7 @@
     <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TagHandlers\Common\BinaryTagBase.cs" />
+    <Compile Include="TagHandlers\Common\LvarTagBase.cs" />
     <Compile Include="TagHandlers\Common\SystemTagBase.cs" />
     <Compile Include="TagHandlers\Common\TagTypeBase.cs" />
     <Compile Include="TagHandlers\Common\TimeTagBase.cs" />
