--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -142,6 +142,8 @@
     <Compile Include="TagHandlers\Objects\TimeTag.cs" />
     <Compile Include="TagHandlers\TagBit.cs" />
     <Compile Include="TagHandlers\TagData.cs" />
+    <Compile Include="TagHandlers\TagHelpInfo.cs" />
+    <Compile Include="TagHandlers\TagMeta.cs" />
     <Compile Include="TagHandlers\TagParser.cs" />
     <Compile Include="TagHandlers\TagSubHandler.cs" />
     <Compile Include="TagHandlers\TagType.cs" />
