--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -109,6 +109,8 @@
     <Compile Include="ListQueue.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TagHandlers\Common\NullTagBase.cs" />
+    <Compile Include="TagHandlers\Common\DynamicTagBase.cs" />
     <Compile Include="TagHandlers\Common\BinaryTagBase.cs" />
     <Compile Include="TagHandlers\Common\LvarTagBase.cs" />
     <Compile Include="TagHandlers\Common\SystemTagBase.cs" />
