--- a/FreneticScriptConsoleTester/FreneticScriptConsoleTester.csproj
+++ b/FreneticScriptConsoleTester/FreneticScriptConsoleTester.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleTestOutputter.cs" />
+    <Compile Include="ConsoleTesterContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysConsole.cs" />
