Reorganize tag folders a bit

--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -111,28 +111,28 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptSystems\ScriptCompiler.cs" />
     <Compile Include="ScriptSystems\ScriptParser.cs" />
-    <Compile Include="TagHandlers\Common\FromSavedTagBase.cs" />
-    <Compile Include="TagHandlers\Common\FunctionTagBase.cs" />
-    <Compile Include="TagHandlers\Common\SaveTagBase.cs" />
-    <Compile Include="TagHandlers\Common\NullTagBase.cs" />
-    <Compile Include="TagHandlers\Common\DynamicTagBase.cs" />
-    <Compile Include="TagHandlers\Common\BinaryTagBase.cs" />
-    <Compile Include="TagHandlers\Common\LvarTagBase.cs" />
-    <Compile Include="TagHandlers\Common\SystemTagBase.cs" />
-    <Compile Include="TagHandlers\Common\TagTypeBase.cs" />
-    <Compile Include="TagHandlers\Common\TimeTagBase.cs" />
-    <Compile Include="TagHandlers\Common\IntegerTagBase.cs" />
-    <Compile Include="TagHandlers\Common\MapTagBase.cs" />
-    <Compile Include="TagHandlers\Common\NumberTagBase.cs" />
-    <Compile Include="TagHandlers\Common\TextColorTagBase.cs" />
-    <Compile Include="TagHandlers\Common\CVarTagBase.cs" />
-    <Compile Include="TagHandlers\Common\EscapeTagBase.cs" />
-    <Compile Include="TagHandlers\Common\ListTagBase.cs" />
-    <Compile Include="TagHandlers\Common\TernaryTagBase.cs" />
-    <Compile Include="TagHandlers\Common\BooleanTagBase.cs" />
-    <Compile Include="TagHandlers\Common\TextTagBase.cs" />
-    <Compile Include="TagHandlers\Common\UnescapeTagBase.cs" />
-    <Compile Include="TagHandlers\Common\VarTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\FromSavedTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\FunctionTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\SaveTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\NullTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\DynamicTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\BinaryTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\LvarTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\SystemTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\TagTypeBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\TimeTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\IntegerTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\MapTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\NumberTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\TextColorTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\CVarTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\EscapeTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\ListTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\TernaryTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\BooleanTagBase.cs" />
+    <Compile Include="TagHandlers\CommonBases\TextTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\UnescapeTagBase.cs" />
+    <Compile Include="TagHandlers\HelperBases\VarTagBase.cs" />
     <Compile Include="TagHandlers\ObjectEditSource.cs" />
     <Compile Include="TagHandlers\Objects\BinaryTag.cs" />
     <Compile Include="TagHandlers\Objects\CVarTag.cs" />
