--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -105,11 +105,11 @@
     <Compile Include="CVar.cs" />
     <Compile Include="CVarSystem.cs" />
     <Compile Include="FreneticEventHandler.cs" />
-    <Compile Include="FreneticUtilities.cs" />
     <Compile Include="ListQueue.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptSystems\ScriptCompiler.cs" />
+    <Compile Include="ScriptSystems\ScriptMetaAttribute.cs" />
     <Compile Include="ScriptSystems\ScriptParser.cs" />
     <Compile Include="TagHandlers\HelperBases\FromSavedTagBase.cs" />
     <Compile Include="TagHandlers\CommonBases\FunctionTagBase.cs" />
@@ -151,6 +151,7 @@
     <Compile Include="TagHandlers\TagData.cs" />
     <Compile Include="TagHandlers\TagForms.cs" />
     <Compile Include="TagHandlers\TagHelpInfo.cs" />
+    <Compile Include="TagHandlers\ObjectMeta.cs" />
     <Compile Include="TagHandlers\TagMeta.cs" />
     <Compile Include="TagHandlers\TagParser.cs" />
     <Compile Include="TagHandlers\TagSubHandler.cs" />
