--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -104,7 +104,7 @@
     <Compile Include="CommandSystem\Arguments\TextArgumentBit.cs" />
     <Compile Include="CVar.cs" />
     <Compile Include="CVarSystem.cs" />
-    <Compile Include="FreneticEventHandler.cs" />
+    <Compile Include="FreneticScriptEventHandler.cs" />
     <Compile Include="ListQueue.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
