--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -94,7 +94,7 @@
     <Compile Include="CommandSystem\QueueCmds\RepeatCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\AssertCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\RequireCommand.cs" />
-    <Compile Include="CommandSystem\QueueCmds\RunCommand.cs" />
+    <Compile Include="CommandSystem\QueueCmds\RunfileCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\StopCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\TryCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\VarCommand.cs" />
