--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -67,6 +67,7 @@
     <Compile Include="CommandSystem\CommonCmds\CvarinfoCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\DebugOutputInvalidCommand.cs" />
     <Compile Include="CommandSystem\CompiledCommandStackEntry.cs" />
+    <Compile Include="CommandSystem\Enumerations.cs" />
     <Compile Include="CommandSystem\QueueCmds\InjectCommand.cs" />
     <Compile Include="CommandSystem\QueueCmds\DebugVarSetCommand.cs" />
     <Compile Include="CommandSystem\CommonCmds\EchoCommand.cs" />
@@ -106,7 +107,6 @@
     <Compile Include="FreneticScriptEventHandler.cs" />
     <Compile Include="FreneticScriptUtilities.cs" />
     <Compile Include="ListQueue.cs" />
-    <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptSystems\ScriptCompiler.cs" />
     <Compile Include="ScriptSystems\ScriptMetaAttribute.cs" />
