--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -107,6 +107,7 @@
     <Compile Include="FreneticScriptUtilities.cs" />
     <Compile Include="ListQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptSystems\ArgumentCompiler.cs" />
     <Compile Include="ScriptSystems\ArgumentParser.cs" />
     <Compile Include="ScriptSystems\ScriptCompiler.cs" />
     <Compile Include="ScriptSystems\ScriptMetaAttribute.cs" />
