--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptSystems\ArgumentCompiler.cs" />
     <Compile Include="ScriptSystems\ArgumentParser.cs" />
+    <Compile Include="ScriptSystems\CILAdaptationValues.cs" />
     <Compile Include="ScriptSystems\ScriptCompiler.cs" />
     <Compile Include="ScriptSystems\ScriptMetaAttribute.cs" />
     <Compile Include="ScriptSystems\ScriptParser.cs" />
