--- a/FreneticScript/FreneticScript.csproj
+++ b/FreneticScript/FreneticScript.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CommandSystem\CommandEvents\ScriptRanScriptEvent.cs" />
     <Compile Include="CommandSystem\CommandQueue.cs" />
     <Compile Include="CommandSystem\CommandQueueEventArgs.cs" />
+    <Compile Include="CommandSystem\ObjectOperationAttribute.cs" />
     <Compile Include="CommandSystem\ScriptEngine.cs" />
     <Compile Include="CommandSystem\CommandScript.cs" />
     <Compile Include="CommandSystem\CommandStackEntry.cs" />
